nautilus format error on 32-bit
Affected version
- Nautilus 43.beta.1
- Debian Unstable
Steps to reproduce
Build with -Werror=format-security
on a 32-bit architecture like i386
Current behavior
FAILED: src/libnautilus.a.p/nautilus-file.c.o
cc -Isrc/libnautilus.a.p -Isrc -I../src -I. -I.. -Ilibnautilus-extension -I../libnautilus-extension
-I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -I/usr/include/gtk-4.0
-I/usr/include/gio-unix-2.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz
-I/usr/include/fribidi -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/i386-linux-gnu -I/usr/include/pixman-1
-I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/graphene-1.0
-I/usr/lib/i386-linux-gnu/graphene-1.0/include -I/usr/include/libmount -I/usr/include/blkid
-I/usr/include/libadwaita-1 -I/usr/include/gnome-autoar-0 -I/usr/include/gnome-desktop-4.0
-I/usr/include/libxml2 -I/usr/include/gsettings-desktop-schemas -I/usr/include/tracker-3.0
-I/usr/include/tracker-3.0/libtracker-sparql -I/usr/include/json-glib-1.0 -I/usr/include/cloudproviders
-fdiagnostics-color=always -D_FILE_OFFSET_BITS=64 -Wall -Winvalid-pch -std=c11 -O0 -Wall
-Wduplicated-branches -Wduplicated-cond -Wlogical-op -Werror=declaration-after-statement -Werror=empty-body
-Werror=format=2 -Werror=implicit-function-declaration -Werror=incompatible-pointer-types -Werror=init-self
-Werror=missing-include-dirs -Werror=missing-prototypes -Werror=pointer-arith -Werror=sequence-point
-Werror=shadow -Werror=strict-prototypes -Werror=undef -Werror=uninitialized -Wno-error=maybe-uninitialized
-D_GNU_SOURCE -DGLIB_DISABLE_DEPRECATION_WARNINGS -g -O2 '-ffile-prefix-map=/<<PKGBUILDDIR>>=.'
-fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -fPIC
-pthread -MD -MQ src/libnautilus.a.p/nautilus-file.c.o -MF src/libnautilus.a.p/nautilus-file.c.o.d
-o src/libnautilus.a.p/nautilus-file.c.o -c ../src/nautilus-file.c
In file included from /usr/include/glib-2.0/glib/gi18n.h:23,
from ../src/nautilus-file.c:36:
../src/nautilus-file.c: In function ‘nautilus_file_get_size_as_string_with_real_size’:
../src/nautilus-file.c:6950:39: error: format ‘%lu’ expects argument of type ‘long unsigned int’,
but argument 2 has type ‘goffset’ {aka ‘long long int’} [-Werror=format=]
6950 | "%lu bytes",
| ^~~~~~~~~~~
../src/nautilus-file.c:6950:42: note: format string is defined here
6950 | "%lu bytes",
| ~~^
| |
| long unsigned int
| %llu
../src/nautilus-file.c:6949:39: error: format ‘%lu’ expects argument of type ‘long unsigned int’,
but argument 2 has type ‘goffset’ {aka ‘long long int’} [-Werror=format=]
6949 | return g_strdup_printf (ngettext ("%lu byte",
| ^~~~~~~~~~
../src/nautilus-file.c:6949:42: note: format string is defined here
6949 | return g_strdup_printf (ngettext ("%lu byte",
| ~~^
| |
| long unsigned int
| %llu
cc1: some warnings being treated as errors
Additional information
Full build logs are available. Click Build Attempted