file: Fix build using the correct format string

The `%lu` format string doesn't match `goffset` type on 32-bit architectures
Let's use the `G_GOFFSET_FORMAT` format string instead.

Closes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2419